--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -95,12 +95,23 @@
     <!-- TARIFF CARD -->
     <string name="tariff_card_month_text">месяц</string>
     <string name="tariff_card_max_speed_text">Скорость до %d мегабит в секунду</string>
-    <string name="tariff_card_prepaid_traffic_prefix_text">Предоплаченный трафик</string>
+    <!-- DETAILS -->
     <plurals name="tariff_card_prepaid_traffic_value">
-        <item quantity="one"> %d Гигабайт</item>
+        <item quantity="one">%d Гигабайт</item>
         <item quantity="few">%d Гигабайта</item>
         <item quantity="many">%d Гигабайт</item>
     </plurals>
+    <plurals name="tariff_card_cost_value">
+        <item quantity="one">%d рубль</item>
+        <item quantity="few">%d рубля</item>
+        <item quantity="many">%d рублей</item>
+    </plurals>
+    <string name="tariff_card_max_speed_value">До %d Мбит в секунду</string>
+    <string name="tariff_card_cost_text">Стоимость в месяц</string>
+    <string name="tariff_card_maximum_speed_details_text">Максимальная скорость</string>
+    <string name="tariff_card_prepaid_traffic_amount_text">Предоплаченный трафик</string>
+    <string name="tariff_card_prepaid_traffic_unlimited_text">Безлимит</string>
+    <string name="tariff_card_connect_from_billing_date">Подключить со следующей расчётной даты</string>
 
     <!-- UTILITIES -->
     <string name="util_date_time_converter_today">Сегодня в</string>
