--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -79,6 +79,9 @@
     <string name="tariffs_list_screen_name">Тарифы</string>
     <string name="tariffs_list_loading_failed_text">Не удалось загрузить</string>
 
+    <!-- ANNOUNCEMENTS SCREEN -->
+    <string name="announcement_list_screen_name">Объявления</string>
+
     <!-- REQUESTS CHAT -->
     <string name="request_chat_screen_name">Чат</string>
     <string name="request_chat_message_placeholder_text">Сообщение</string>
