--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,6 +23,8 @@
 
     <!-- POST DETAILS SCREEN -->
     <string name="post_details_screen_name">Подробности</string>
+    <string name="post_details_screen_updated_text_short">ред.</string>
+    <string name="post_details_screen_updated_text_long">Отредактировано</string>
 
     <!-- EDIT POSTS SCREEN -->
     <string name="add_post_screen_name">Добавить пост</string>
