--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -111,6 +111,7 @@
     <string name="notifications_settings_screen_global_settings_title">Глобальные настройки</string>
     <string name="notifications_settings_screen_global_settings_description">Включены ли уведомления во всём приложении</string>
     <string name="notifications_settings_screen_global_settings_is_notifications_enabled">Включить уведомления</string>
+    <string name="notifications_settings_screen_global_settings_is_notifications_on_device_enabled">Получать на этом устройстве</string>
     <string name="notifications_settings_screen_mailings_title">Рассылки</string>
     <string name="notifications_settings_screen_mailings_description">Рассылки, по которым будут включены уведомления</string>
     <string name="notifications_settings_screen_permissions_title">Разрешения</string>
@@ -175,4 +176,12 @@
     <string name="tariff_type_unlimited_name">Безлимитный</string>
     <string name="tariff_type_limited_name">Помегабайтный</string>
     <string name="tariff_type_archive_name">Архив</string>
+
+    <!-- NOTIFICATIONS RESOURCES -->
+    <string name="notifications_new_post_title">Новый пост | %s</string>
+    <string name="notifications_new_tariff_title">Встречайте новый тариф - %s</string>
+    <string name="notifications_new_tariff_body">Возможно, он подойдет именно Вам?</string>
+    <string name="notifications_new_announcement_title">Внимание! Появилось важное объявление!</string>
+    <string name="notifications_new_announcement_body">%s\nПодробности в разделе объявлений</string>
+    <string name="notifications_new_message_title">Новое сообщение | %s</string>
 </resources>
