--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -110,9 +110,9 @@
     <string name="notifications_settings_screen_name">Уведомления</string>
     <string name="notifications_settings_screen_global_settings_title">Глобальные настройки</string>
     <string name="notifications_settings_screen_global_settings_is_notifications_enabled">Включить уведомления</string>
-    <string name="notifications_settings_screen_global_settings_is_notifications_enabled_description">Включены ли уведомления для Вашей учетной записи</string>
+    <string name="notifications_settings_screen_global_settings_is_notifications_enabled_description">Включить уведомления для Вашей учетной записи</string>
     <string name="notifications_settings_screen_global_settings_is_notifications_on_device_enabled">Получать на устройстве</string>
-    <string name="notifications_settings_screen_global_settings_is_notifications_on_device_enabled_description">Хотите ли Вы получать уведомления на этом устройстве</string>
+    <string name="notifications_settings_screen_global_settings_is_notifications_on_device_enabled_description">Получать уведомления на этом устройстве</string>
     <string name="notifications_settings_screen_mailings_title">Рассылки</string>
     <string name="notifications_settings_screen_mailings_description">Рассылки, по которым будут включены уведомления</string>
     <string name="notifications_settings_screen_permissions_title">Разрешения</string>
