--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,6 +122,8 @@
     <string name="request_chat_screen_name">Chat</string>
     <string name="request_chat_message_placeholder_text">Message</string>
     <string name="request_chat_no_messages_found">There is no messages yet!</string>
+    <string name="request_chat_messages_not_allowed_title">Sending messages is not available</string>
+    <string name="request_chat_messages_not_allowed_description">This request is closed</string>
 
     <!-- REQUEST CARD -->
     <string name="request_card_status_text">Status:</string>
