--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,7 +70,8 @@
     <string name="create_request_response_error">Unable to create new request. Try again later</string>
     <string name="create_request_screen_request_title_title">Title</string>
     <string name="create_request_screen_request_description_title">Description</string>
-    <string name="create_request_screen_request_notifications_title">Notifications</string>
+    <string name="create_request_screen_request_settings_title">Other settings</string>
+    <string name="create_request_screen_request_notifications_title">Receive notifications</string>
     <string name="create_request_screen_request_title_placeholder">Enter a title</string>
     <string name="create_request_screen_request_description_placeholder">Describe your problem</string>
     <string name="create_request_screen_request_notifications_checkbox_placeholder">Receive notifications about new messages in the chat</string>
